adds food table

--- a/foods.html
+++ b/foods.html
@@ -5,7 +5,17 @@
   <title>Quantified Self - Manage Foods</title>
 </head>
 <body>
-
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Calories</th>
+    </tr>
+    <tr>
+      <td>placeholder</td>
+      <td>placeholder</td>
+      <td><input type="submit" value="Delete"/></td>
+    </tr>
+  </table>
   <script src="main.bundle.js"></script>
 </body>
 </html>
