--- a/index.html
+++ b/index.html
@@ -14,30 +14,7 @@
 <div class="container">
 
 <h1 class="text-center">Diary</h1><br>
-<div class="row">
-
-<div class="col-md-6">
-
-<h3 class="text-center">Breakfast</h3>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Calories</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Banana</td>
-      <td>90</td>
-    </tr>
-  </tbody>
-
-</table>
-</div>
-<div class="col-md-6">
-<h3>Lunch</h3>
-</div>
+<div class="row" id="meals">
 </div>
 
 </div>
