--- a/foods.html
+++ b/foods.html
@@ -3,19 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Quantified Self - Manage Foods</title>
-</head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script></head>
 <body>
-  <table>
+  <table class='foods-table'>
     <tr>
       <th>Name</th>
       <th>Calories</th>
     </tr>
-    <tr>
-      <td>placeholder</td>
-      <td>placeholder</td>
-      <td><input type="submit" value="Delete"/></td>
-    </tr>
   </table>
-  <script src="main.bundle.js"></script>
+
+  <script src="main.bundle.js">
+  </script>
 </body>
 </html>
