adds delete and add to foods

--- a/foods.html
+++ b/foods.html
@@ -11,6 +11,15 @@
       <th>Calories</th>
     </tr>
   </table>
+  <div class='manage-food'>
+    <h3>Add Food</h3>
+    <form>
+      <input type='text' name='food' placeholder='Food'><br>
+      <input type='text' name='calories' placeholder='Calories'><br>
+      <input type='submit' class='add-food'>
+    </form>
+  </div>
+
 
   <script src="main.bundle.js">
   </script>
