--- a/foods.html
+++ b/foods.html
@@ -11,11 +11,10 @@
       <th>Calories</th>
     </tr>
   </table>
-  <div class='manage-food'>
     <h3>Add Food</h3>
-    <form>
-      <input type='text' name='food' placeholder='Food'><br>
-      <input type='text' name='calories' placeholder='Calories'><br>
+    <form class='manage-food'>
+      <input type='text' name='food' class='food' placeholder='Food'><br><br>
+      <input type='text' name='calories' class='calories' placeholder='Calories'><br>
       <input type='submit' class='add-food'>
     </form>
   </div>
