adds totals table

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <div class="row" id="meals">
 </div>
 
+<div class="col-md-6" id="totals-table">
+  <h3 class="text-center">Total</h3>
+</div>
+
 </div>
 
 </body>
