--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Quantified Self - Diary</title>
+  <link rel="stylesheet" href="vendors/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
@@ -13,12 +14,18 @@
   <script src="main.bundle.js"></script>
 <div class="container">
 
-<h1 class="text-center">Diary</h1><br>
+<h1 class="text-center">Diary <i class="fa fa-minus-circle" aria-hidden="true"></i></h1><br>
 <div class="row" id="meals">
 </div>
+<div class="row">
 
 <div class="col-md-6" id="totals-table">
   <h3 class="text-center">Total</h3>
+</div>
+
+<div class="col-md-6" id="foods-table">
+  <h3 class="text-center">Foods</h3>
+</div>
 </div>
 
 </div>
