adds food delete functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="main.bundle.js"></script>
 <div class="container">
 
-<h1 class="text-center">Diary <i class="fa fa-minus-circle" aria-hidden="true"></i></h1><br>
+<h1 class="text-center">Diary </h1><br>
 <div class="row" id="meals">
 </div>
 <div class="row">
