adds meal buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <script src="main.bundle.js"></script>
+<script src="main.bundle.js"></script>
 <div class="container">
 
 <h1 class="text-center">Diary </h1><br>
@@ -25,10 +25,15 @@
 
 <div class="col-md-6" id="foods-table">
   <h3 class="text-center">Foods</h3>
+  <div class="text-center">
+    <p>Add Selected to:</p>
+    <button type="button" name="button" class="btn btn-primary">Breakfast</button>
+    <button type="button" name="button" class="btn btn-primary">Lunch</button>
+    <button type="button" name="button" class="btn btn-primary">Dinner</button>
+    <button type="button" name="button" class="btn btn-primary">Snacks</button>
+  </div><br>
 </div>
 </div>
-
 </div>
-
 </body>
 </html>
