--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
 
 <div class="col-md-6" id="foods-table">
   <h3 class="text-center">Foods</h3>
-  <div class="text-center">
+  <div class="text-center" id="add-selected">
     <p>Add Selected to:</p>
-    <button type="button" name="button" class="btn btn-primary">Breakfast</button>
-    <button type="button" name="button" class="btn btn-primary">Lunch</button>
-    <button type="button" name="button" class="btn btn-primary">Dinner</button>
-    <button type="button" name="button" class="btn btn-primary">Snacks</button>
   </div><br>
 </div>
 </div>
