--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 <div class="row">
 
 <div class="col-md-6" id="totals-table">
-  <h3 class="text-center">Total</h3>
+  
 </div>
 
 <div class="col-md-6" id="foods-table">
-  <h3 class="text-center">Foods</h3>
-  <div class="text-center" id="add-selected">
-    <p>Add Selected to:</p>
-  </div><br>
+  <div class="text-center" id="foods-table-headers"></div><br>
+  <div class="text-center" id="add-selected"></div><br>
 </div>
 </div>
 </div>
