--- a/index.html
+++ b/index.html
@@ -10,24 +10,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 </head>
 <body>
-
-<script src="main.bundle.js"></script>
-<div class="container">
-
-<h1 class="text-center">Diary </h1><br>
-<div class="row" id="meals">
-</div>
-<div class="row">
-
-<div class="col-md-6" id="totals-table">
-  
-</div>
-
-<div class="col-md-6" id="foods-table">
-  <div class="text-center" id="foods-table-headers"></div><br>
-  <div class="text-center" id="add-selected"></div><br>
-</div>
-</div>
-</div>
+  <script src="main.bundle.js"></script>
+  <div class="container">
+    <h1 class="text-center">Diary </h1><br>
+    <div class="row" id="meals"></div>
+    <div class="row">
+      <div class="col-md-6" id="totals-table"></div>
+      <div class="col-md-6" id="foods-table">
+        <div class="text-center" id="foods-table-headers"></div><br>
+        <div class="text-center" id="add-selected"></div><br>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
