--- a/foods.html
+++ b/foods.html
@@ -5,6 +5,8 @@
   <title>Quantified Self - Manage Foods</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script></head>
 <body>
+  <h1>Foods</h1>
+  <input type="text" id="myInput" onkeyup="filterFoods()" placeholder="Filter by Food">
   <table class='foods-table'>
     <tr>
       <th>Name</th>
