--- a/foods.html
+++ b/foods.html
@@ -6,7 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script></head>
 <body>
   <h1>Foods</h1>
-  <input type="text" id="myInput" onkeyup="filterFoods()" placeholder="Filter by Food">
+  <input type="text" id="myInput" placeholder="Filter by Food">
   <table class='foods-table'>
     <tr>
       <th>Name</th>
