--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <script src="main.bundle.js"></script>
   <div class="container">
-    <h1 class="text-center">Diary </h1><br>
+    <h1 class="text-center">Diary! </h1><br>
     <div class="row" id="meals"></div>
     <div class="row">
       <div class="col-md-6" id="totals-table"></div>
