--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <body>
   <script src="main.bundle.js"></script>
   <div class="container">
-    <h1 class="text-center">Diary! </h1><br>
+    <h1 class="text-center">Diary</h1><br>
     <div class="row" id="meals"></div>
     <div class="row">
       <div class="col-md-6" id="totals-table"></div>
-      <div class="col-md-6" id="foods-table">
+      <div class="col-md-6">
         <div class="text-center" id="foods-table-headers"></div><br>
         <div class="text-center" id="add-selected"></div><br>
+        <div class="text-center" id="foods-table"></div><br>
       </div>
     </div>
   </div>
